tests/test_enum/bad/output/empty.catala_en.Typecheck
[ERROR] The enum Foo does not have any cases; give it some for Catala to be able to accept it.

 --> tests/test_enum/bad/empty.catala_en
  |
4 | declaration enumeration Foo:
  |                         ^^^
  + Test
